--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">BasicLayoutCompose</string>
+    <string name="placeholder_search">Search</string>
+    <string name="aling_body_title">Align your Body</string>
+    <string name="favorite_collections">Favorite Collections</string>
+    <string name="abl_inversions">Inversions</string>
+    <string name="settings">Settings</string>
+    <string name="profile">Profile</string>
+    <string name="abl_inversions5">Inversions5555</string>
+
 </resources>
